
option(ICUB_INSTALL_ALL_ROBOTS "Enable installation of all robots" OFF)

set(ROBOT_NAME "$ENV{YARP_ROBOT_NAME}" CACHE PATH
    "Name of your robot")

set(ROBOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/${ROBOT_NAME}")

if(ICUB_INSTALL_ALL_ROBOTS) # Install all robot-specific files
  add_subdirectory(coman)
  add_subdirectory(iCubAberystwyth01)
  add_subdirectory(iCubAbuDhabi01)
  add_subdirectory(iCubAnkara01)
  add_subdirectory(iCubBarcelona01)
  add_subdirectory(iCubBielefeld01)
  add_subdirectory(iCubBielefeld02)
  add_subdirectory(iCubBielefeld03)
  #add_subdirectory(iCubBremen01)
  add_subdirectory(iCubChemnitz01)
  add_subdirectory(iCubDaejeon01)
  add_subdirectory(iCubFrankfurt01)
  add_subdirectory(iCubGenova01)
  add_subdirectory(iCubGenova02)
  add_subdirectory(iCubGenova03)
  add_subdirectory(iCubGenova04)
  add_subdirectory(iCubGrenoble01)
  add_subdirectory(iCubHamburg01)
  add_subdirectory(iCubHertfordshire01)
  add_subdirectory(iCubHertfordshire02)
  add_subdirectory(iCubKarlsruhe01)
  add_subdirectory(iCubLausanne01)
  add_subdirectory(iCubLisboa01)
  add_subdirectory(iCubLisboa02)
  add_subdirectory(iCubLondon01)
  add_subdirectory(iCubLugano01)
  add_subdirectory(iCubLyon01)
  add_subdirectory(iCubMunich01)
  add_subdirectory(iCubOffenbach01)
  #add_subdirectory(iCubOffenbach01_old)
  add_subdirectory(iCubOffenbach02)
  add_subdirectory(iCubOsaka01)
  add_subdirectory(iCubParis01)
  add_subdirectory(iCubParis02)
  add_subdirectory(iCubPlymouth01)
  add_subdirectory(iCubPrototype01)
  add_subdirectory(iCubRome01)
  add_subdirectory(iCubRome02)
  add_subdirectory(iCubSheffield01)
  add_subdirectory(iCubUrbana01)
  add_subdirectory(iCubZurich01)
  add_subdirectory(SkinTableTop)
else()

  if (ROBOT_NAME)
    add_subdirectory(${ROBOT_NAME})
  endif()
endif()

#setup symbolic link (on UNIX...)

if ("${ROBOT_NAME}" STREQUAL "")
  message(STATUS "No robot name")
else ("${ROBOT_NAME}" STREQUAL "")
  if (EXISTS ${ROBOT_DIR})
    
    if(UNIX)
      message(STATUS "Setting up symbolic link for ${ROBOT_NAME}")
      install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_INSTALL_PREFIX}/${ICUB_ROBOTS_INSTALL_DIR}/${ROBOT_NAME})\n
      execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_INSTALL_PREFIX}/${ICUB_ROBOTS_INSTALL_DIR}/${ROBOT_NAME} ${CMAKE_INSTALL_PREFIX}/${ICUB_ROBOTS_INSTALL_DIR}/default)")
      add_custom_target(robotSymLink ALL COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_BINARY_DIR}/${ICUB_ROBOTS_INSTALL_DIR}/${ROBOT_NAME} ${CMAKE_BINARY_DIR}/${ICUB_ROBOTS_INSTALL_DIR}/default DEPENDS ${CMAKE_BINARY_DIR}/${ICUB_ROBOTS_INSTALL_DIR}/${ROBOT_NAME})      
    else()
      message(STATUS "Cannot set up symbolic link for ${ROBOT_NAME} on this OS, please set the YARP_ROBOT_NAME environment variable to ${ROBOT_NAME}")
    endif()

  else(EXISTS ${ROBOT_DIR})
    message(WARNING "ROBOT_NAME is set to ${ROBOT_NAME} but the app/robots/${ROBOT_NAME} directory does not exist")
  endif(EXISTS ${ROBOT_DIR})
endif ("${ROBOT_NAME}" STREQUAL "")

