SET(PROJECTNAME affActionPrimitives)

PROJECT(${PROJECTNAME})

FIND_PACKAGE(YARP)
FIND_PACKAGE(ICUB)
FIND_PACKAGE(Ace)

FIND_PACKAGE(CTRLLIB REQUIRED)
INCLUDE_DIRECTORIES(${CTRLLIB_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ACE_INCLUDE_DIR})

SET(folder_source src/affActionPrimitives.cpp)
SET(folder_header include/iCub/affActionPrimitives.h)

SOURCE_GROUP("Source Files" FILES ${folder_source})
SOURCE_GROUP("Header Files" FILES ${folder_header})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

ADD_LIBRARY(${PROJECTNAME} ${folder_source} ${folder_header})

# Add CTRLLIB dependencies
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CTRLLIB_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${ACE_LIBRARY})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GSL_LIBRARIES})

IF(MSVC)
   SET_TARGET_PROPERTIES(${PROJECTNAME} PROPERTIES COMPILE_FLAGS /wd4996)
ENDIF(MSVC)

IF(WIN32 AND NOT CYGWIN)
   SET_TARGET_PROPERTIES(${PROJECTNAME} PROPERTIES DEBUG_POSTFIX "d")
ENDIF(WIN32 AND NOT CYGWIN)

INSTALL(TARGETS ${PROJECTNAME} DESTINATION lib)
INSTALL(FILES ${folder_header} DESTINATION include/iCub)

