SET(PROJECTNAME alignKin2Cam)

PROJECT(${PROJECTNAME})

FIND_PACKAGE(YARP)
FIND_PACKAGE(ICUB)
FIND_PACKAGE(OpenCV REQUIRED)

IF(NOT OPENCV_FOUND)
   MESSAGE(FATAL_ERROR "OpenCV is strictly required!")
ENDIF(NOT OPENCV_FOUND)

INCLUDE_DIRECTORIES(${OPENCV_INCLUDE_DIR})

SET(folder_source main.cpp)

SOURCE_GROUP("Source Files" FILES ${folder_source})

ADD_EXECUTABLE(${PROJECTNAME} ${folder_source})
TARGET_LINK_LIBRARIES(${PROJECTNAME} ${OPENCV_LIBRARIES})
INSTALL(TARGETS ${PROJECTNAME} DESTINATION ${ICUB_DIR}/bin)



