PROJECT(armFbControl)

FIND_PACKAGE(ICUB)
FIND_PACKAGE(YARP)

FIND_PACKAGE(YARPMATH REQUIRED)
FIND_PACKAGE(RFWR REQUIRED)

LINK_LIBRARIES(${YARPMATH_LIBRARIES})
LINK_LIBRARIES(${RFWR_LIBRARIES})

INCLUDE_DIRECTORIES(${YARPMATH_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${RFWR_INCLUDE_DIRS})

FILE(GLOB folder_source *.cpp)
FILE(GLOB folder_header *.h)
SOURCE_GROUP("Source Files" FILES ${folder_source})
SOURCE_GROUP("Header Files" FILES ${folder_header})

ADD_EXECUTABLE(armFbControl ${folder_source} ${folder_header})


