PROJECT(armreachinglearner)

FIND_PACKAGE(ICUB)
FIND_PACKAGE(YARP)

FILE(GLOB folder_header *.h)
FILE(GLOB folder_source *.cpp)

SOURCE_GROUP("Source Files" FILES ${folder_source})
SOURCE_GROUP("Header Files" FILES ${folder_header})

FIND_PACKAGE(YARPMATH)
FIND_PACKAGE(RFWR)

LINK_LIBRARIES(${YARPMATH_LIBRARIES})
LINK_LIBRARIES(${RFWR_LIBRARIES})

INCLUDE_DIRECTORIES(${YARPMATH_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${RFWR_INCLUDE_DIRS})


ADD_EXECUTABLE(armreachinglearner ${folder_source} ${folder_header})
INSTALL(TARGETS armreachinglearner DESTINATION "${INSTALL_DIR}/bin")
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
