PROJECT(camshift)
SET(YARP_DIR "$ENV{YARP_ROOT}" CACHE LOCATION "where is yarp?")


FIND_PACKAGE(YARP)
FIND_PACKAGE(OpenCV)
####FIND_PACKAGE(ICUB)

FILE(GLOB folder_header *.h)
FILE(GLOB folder_source *.cpp)

INCLUDE_DIRECTORIES(${OPENCV_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
LINK_LIBRARIES(${OPENCV_LIBRARIES})


ADD_EXECUTABLE(camshift ${folder_source} ${folder_header})

